# cornershop

./: .env.example  .gitignore  Dockerfile  Example.ipynb  First Request.ipynb  Makefile  README.md  docker-compose.yml  get_prices.py  pyproject.toml  requirements.txt
notebooks/: First Request.ipynb  local_to_bq.ipynb
src/: get_json.py  listas.py
